--- a/app/components/views/testView.html
+++ b/app/components/views/testView.html
@@ -17,6 +17,7 @@
 </style>
 </head>
 <body>
+	<h4>Please select different way to communicate:</h4>	
 <div class="container-fluid">
 	<div class="row equal">
 			<div class="col-sm-3" style="background-color:lavender;">
