--- a/app/components/comNavigation/comNavigation.htm
+++ b/app/components/comNavigation/comNavigation.htm
@@ -8,13 +8,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+	<h5>Select different communication method</h5>
 <ul>
 	 <li ng-repeat="x in choices" ng-click="pickChoices(x)">{{x.Label}}</li>
 </ul>
 <form>
   <div class="form-group">
-    <label>Message: </label>
+    <label>Send Message with different methods: </label>
 	<input ng-model="msg" class="form-control" type="text">
   </div>
   <div class="form-group">
