--- a/app/components/comNavigation/comNavigation.htm
+++ b/app/components/comNavigation/comNavigation.htm
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<h5>First select different communication method</h5>
+	<h5><label>First select different communication method:</label></h5>
 <ul>
 	 <li ng-repeat="x in choices" ng-click="pickChoices(x)">{{x.Label}}</li>
 </ul>
