--- a/app/components/views/aboutView.html
+++ b/app/components/views/aboutView.html
@@ -4,7 +4,7 @@
 		Service or even $Broadcast/$Emit techniques of communications? Let's take a look by going through a sample project:</div>
 
 	<div>
-The four techniques we will going to comparing are:<br>
+The four techniques we will going to comparing are:<br/>
 <ul>
 <li>communicate with $rootScope</li>
 <li>communicate with Service</li>
