--- a/app/components/views/aboutView.html
+++ b/app/components/views/aboutView.html
@@ -3,8 +3,8 @@
 		best solution , especially for one to many communications? What's wrong with the popular $rootScope,
 		Service or even $Broadcast/$Emit techniques of communications? Let's take a look by going through a sample project:</div>
 
-	<div>
-The four techniques we will going to comparing are:<br/>
+	<div><br/>
+The four techniques we will going to comparing are:<br/><br/>
 <ul>
 <li>communicate with $rootScope</li>
 <li>communicate with Service</li>
