--- a/app/components/views/aboutView.html
+++ b/app/components/views/aboutView.html
@@ -1,15 +1,14 @@
-<div class="center">
+
 	<div>It is known that there are different techniques of communication among scopes in AngularJS, which one is the 
 		best solution , especially for one to many communications? What's wrong with the popular $rootScope,
 		Service or even $Broadcast/$Emit techniques of communications? Let's take a look by going through a sample project:</div>
 
-	<div><br/>
-The four techniques we will going to comparing are:<br/><br/>
+	<div><br>
+The four techniques we will going to comparing are:<br><br>
 <ul>
 <li>communicate with $rootScope</li>
 <li>communicate with Service</li>
 <li>communicate with $Broadcast, $Emit and $On</li>
 <li>communicate with Publish and Subscribe</li>
 </ul>
-	</div>
 </div>
