--- a/app/components/views/aboutView.html
+++ b/app/components/views/aboutView.html
@@ -1,9 +1,13 @@
+<html>
 
-	<div>It is known that there are different techniques of communication among scopes in AngularJS, which one is the 
+<title>About</title>
+
+<Body>
+	It is known that there are different techniques of communication among scopes in AngularJS, which one is the 
 		best solution , especially for one to many communications? What's wrong with the popular $rootScope,
-		Service or even $Broadcast/$Emit techniques of communications? Let's take a look by going through a sample project:</div>
+		Service or even $Broadcast/$Emit techniques of communications? Let's take a look by going through a sample project:
 
-	<div><br>
+	<br>
 The four techniques we will going to comparing are:<br><br>
 <ul>
 <li>communicate with $rootScope</li>
@@ -11,4 +15,5 @@ The four techniques we will going to comparing are:<br><br>
 <li>communicate with $Broadcast, $Emit and $On</li>
 <li>communicate with Publish and Subscribe</li>
 </ul>
-</div>
+	</body>
+</html>
