--- a/app/components/views/aboutView.html
+++ b/app/components/views/aboutView.html
@@ -3,12 +3,12 @@
 <title>About</title>
 
 <Body>
-	It is known that there are different techniques of communication among scopes in AngularJS, which one is the 
+	<p>It is known that there are different techniques of communication among scopes in AngularJS, which one is the 
 		best solution , especially for one to many communications? What's wrong with the popular $rootScope,
 		Service or even $Broadcast/$Emit techniques of communications? Let's take a look by going through a sample project:
-
+	</p>
 	<br>
-The four techniques we will going to comparing are:<br><br>
+The four techniques I am going to comparing are:<br><br>
 <ul>
 <li>communicate with $rootScope</li>
 <li>communicate with Service</li>
