--- a/app/components/views/aboutView.html
+++ b/app/components/views/aboutView.html
@@ -1,8 +1,14 @@
 <html>
 
 <title>About</title>
-
+<style>
+.content {
+    max-width: 500px;
+    margin: auto;
+}
+</style>
 <Body>
+	<div class="content">
 	<p>It is known that there are different techniques of communication among scopes in AngularJS, which one is the 
 		best solution , especially for one to many communications? What's wrong with the popular $rootScope,
 		Service or even $Broadcast/$Emit techniques of communications? 
@@ -16,5 +22,6 @@ The four techniques I am going to comparing are:<br><br>
 <li>communicate with $Broadcast, $Emit and $On</li>
 <li>communicate with Publish and Subscribe</li>
 </ul>
+	</div>
 	</body>
 </html>
