--- a/app/components/comNavigation/comNavigation.htm
+++ b/app/components/comNavigation/comNavigation.htm
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  	li { cursor: pointer; }
+  </style>
 </head>
 <body>
 	<h5><label>First select different communication method:</label></h5>
