--- a/app/components/comNavigation/comNavigation.htm
+++ b/app/components/comNavigation/comNavigation.htm
@@ -13,7 +13,7 @@
 <body>
 	<h5><label>First select different communication method:</label></h5>
 <ul>
-	<li ng-repeat="x in choices" ng-click="pickChoices(x)"><a>{{x.Label}}</a></li>
+	<li ng-repeat="x in choices" ng-click="pickChoices(x)"><a><u>{{x.Label}}</u></a></li>
 </ul>
 <form>
   <div class="form-group">
